--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "dependencies": {
     "@clerk/nextjs": "^6.1.0",
     "@hookform/resolvers": "^3.9.1",
+    "@huggingface/inference": "^2.8.1",
+    "@langchain/community": "^0.3.11",
+    "@langchain/core": "^0.3.17",
+    "@langchain/pinecone": "^0.1.1",
+    "@pinecone-database/pinecone": "^4.0.0",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -23,10 +28,15 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@types/jest": "^29.5.14",
+    "@upstash/ratelimit": "^2.0.4",
+    "@upstash/redis": "^1.34.3",
+    "add": "^2.0.6",
     "ai": "^3.4.31",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "groq-sdk": "^0.7.0",
+    "langchain": "^0.3.5",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "next-cloudinary": "^6.16.0",
