--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^29.5.14",
     "@upstash/ratelimit": "^2.0.4",
     "@upstash/redis": "^1.34.3",
+    "@xenova/transformers": "^2.17.2",
     "add": "^2.0.6",
     "ai": "^3.4.31",
     "axios": "^1.7.7",
